# my-miniGPT

./: Dockerfile.serve  Dockerfile.train  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
automation/: memory_estimator.py  run_ablations.py  run_experiment.py  sweep.py
configs/: ablations.yaml  sweep_config.yaml
configs/model/: config.py
data/: prepare.py
data/tinystories/: meta.json
deployment/: model_card.py  serve_llamacpp.py  serve_sglang.py  serve_vllm.py
evaluation/: benchmarks.py  llm_comparator.py  perplexity.py  report.py  vertex_judge.py
miniGPT/: __init__.py  generation.py  model.py
miniGPT/modules/: __init__.py  attention.py  ffn.py  norms.py  pos_encoding.py  prediction.py  residual.py
quantization/: export_awq.py  export_gguf.py  export_gptq.py  export_hf.py  turboquant.py
scripts/: download_data.py  train_tokenizer.py  upload_to_hub.py
tests/: test_attention.py  test_config.py  test_ffn.py  test_generation.py  test_model.py  test_norms.py  test_pos_encoding.py  test_prediction.py  test_residual.py  test_shapes.py
training/: data.py  dpo.py  sft.py  toml_generator.py  torchtitan_integration.py  train.py
ui/: gradio_app.py
